# GenMol

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  test_mutate_safe_fragment.ipynb
FlashAffinity/: .gitignore  LICENSE  README.md  env.yaml  predict_antibiotic.sh  predict_binary.sh  predict_enzyme.sh  predict_value.sh  predict_value_original.sh  preprocess_proteins.sh  rebuild_fabind_env.sh  run_test.sh
FlashAffinity/FABind_plus/: convert_data_to_csv.py  run.sh  run_molecule.sh  run_protein.sh
FlashAffinity/data/: my_smiles.csv
FlashAffinity/docs/: data_process.md  eval.md  predict.md  train.md
FlashAffinity/scripts/: predict.py  train.py
LICENSE/: license_weights.txt  third-party.txt
configs/: base.yaml
configs/comparison/: beam_search_baseline.yaml  beam_search_fa.yaml  ddpp_direct_fa.yaml  ddpp_threshold_fa.yaml  fa_4hr_trevor.yaml  mcts_surrogate_4hr.yaml  mcts_surrogate_full_oracle.yaml  uncond_baseline.yaml  uncond_v1only.yaml  uncond_v2only.yaml  v1_ddpp_4hr.yaml  v1_mcts_4hr.yaml  v1_uncond_1hr.yaml  v2_all_methods.yaml
data/: fragments.csv  len.pk
env/: fix_safe_imports.sh  requirements.txt  requirements.yaml  setup.sh
evals/: boltz_affinity.py  flash_affinity.py  metrics.py  run_evals.py
outputs/: unconditional_samples.csv
scripts/: comparison.py  eval_guided_vs_beam.py  generate_affinity_data.py  preprocess_data.py  train.py  train_affinity_surrogate.py  train_qed_surrogate.py
src/genmol/: DAPS_sampler.py  beam_search_sampler.py  guided_sampler.py  mcts_sampler.py  model.py  model_loader.py  qed_surrogate.py  sampler.py  (+1 more)
(+164 files in other folders)
